--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="login">Log In</string>
     <string name="signup">Sign Up</string>
+    <string name="logout">Log Out</string>
 
     <string name="username">Username</string>
     <string name="email">Email</string>
@@ -11,4 +12,5 @@
     <string name="full_name">Fullname</string>
 
     <string name="submit">Submit</string>
+    <string name="not_logged_in">You\'re not logged in.</string>
 </resources>
